# astropi-companion

./: .env  .gitignore  .pylintrc  Dockerfile  README.md  astropi.service  build.sh  dev.sh  docker-compose.yaml  dump.rdb  local.env  package-lock.json  prod.env  pyproject.toml  run.sh  web-wifi.service
api/: main.py  telescope-requests.json
api/files/: files.py
api/scripts/: luminance.sh  rawToJpg.sh  sync.sh
api/sessions/: _blueprint.py  sessions.py
api/telescope/: _blueprint.py  telescope.py
api/util/: annotate.py  arc_second_pp.py  capture.py  constants.py  exif.py  fetch_weather.py  get_catalog.py  gphoto2.py  helpers.py  memoize.py  sessions.py  telescope.py
capture_app/: __init__.py  _response.py  main.py
capture_app/annotate/: annotate.py
capture_app/camera/: __init__.py  camera.py
capture_app/exif/: __init__.py  _blueprint.py  exif.py
capture_app/histogram/: histogram.py
capture_app/images/: __init__.py  _blueprint.py  images.py
capture_app/plate/: HELP.md  platesolve.py
capture_app/scripts/: annotate.sh  plate-solve.sh  sync.sh
capture_app/stack/: _blueprint.py  stack.py
capture_app/telescope/: telescope.py
capture_app/util/: __init__.py  _get_catalog.py  annotate.py  arc_second_pp.py  camera_config.py  capture.py  exif.py  fetch_weather.py  get_catalog.py  get_catalog.txt  get_lum_value.py  get_weather.py  helpers.py  ngc.py  response.py
sessions/: 376c833f-fedc-4a48-8c34-3eb6c8259400.json
src/: app.py  logging.json  telescope-test.py
src/api/: __init__.py  _blueprint.py  api.py
src/lib/: camera_class.py  gphoto2.py  (+1 more)
(+154 files in other folders)
